samples/_failures_safe/1761628961_5306f1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8bc17ccc.c: In function ‘main’:
./samples/SAFE/__tmp_8bc17ccc.c:146:5: error: expected expression at end of input
  146 |     if (add_transition(sm, 1, 3, 3) <
      |     ^~
./samples/SAFE/__tmp_8bc17ccc.c:146:5: error: expected declaration or statement at end of input
